--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         </ul>
         <div class="cover" id="cover"></div>
     </nav>
+    <button id="top" onclick="topFunction()">△</button>
+    <div class="graph"></div>
     <!--<iframe src="README.md" frameborder="0" markdown=1 class="readme"></iframe>-->
     <script src="script.js"></script>
 </body>
