--- a/Web/index.html
+++ b/Web/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <img src="3dlogo.svg" alt="" class="logo">
+        <img src="web_images/3dlogo.svg" alt="" class="logo">
         <button class="hamburger" onclick="hide()" id="hide"></button>
         <button class="hamburger" onclick="show()" id="show">
             <div class="l" id="l1"></div>
