--- a/Web/index.html
+++ b/Web/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dataverse</title>
+    <link rel="icon" class="favicon" type="image/x-icon" href="web_images/2dlogo.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
