--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dataverse</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="web/style.css">
 </head>
 <body>
     <nav>
@@ -25,6 +25,6 @@
         <div class="cover" id="cover"></div>
     </nav>
     
-    <script src="script.js"></script>
+    <script src="web/script.js"></script>
 </body>
 </html>
