--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dataverse</title>
+    <link rel="icon" class="favicon" type="image/x-icon" href="web_images/2dlogo.png">
     <link rel="stylesheet" href="web/style.css">
 </head>
 <body>
     <nav>
-        <img src="3dlogo.svg" alt="" class="logo">
+        <img src="web_images/3dlogo.svg" alt="" class="logo">
         <button class="hamburger" onclick="hide()" id="hide"></button>
         <button class="hamburger" onclick="show()" id="show">
             <div class="l" id="l1"></div>
