--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dataverse</title>
     <link rel="icon" class="favicon" type="image/x-icon" href="web_images/2dlogo.png">
-    <link rel="stylesheet" href="web/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
@@ -26,6 +26,6 @@
         <div class="cover" id="cover"></div>
     </nav>
     
-    <script src="web/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
