--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dataverse</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="2dlogo.svg">
+    <link rel="icon" type="image/x-icon" href="web_images/2dlogo.svg">
 </head>
 
 <body id="body">
@@ -20,7 +20,7 @@
             src="https://icons.veryicon.com/png/o/miscellaneous/light-weight-line-icon/st-github.png" id="github"></a>
         </div>
     <nav id="navbar">
-        <a href="index.html"><img src="3dlogo.svg" alt="" class="logo" id="logo"></a>
+        <a href="index.html"><img src="web_images/3dlogo.svg" alt="" class="logo" id="logo"></a>
         <button class="hamburger" onclick="hide()" id="hide"></button>
         <button class="hamburger" onclick="show()" id="show">
             <div class="l" id="l1"></div>
