--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <p id="csstag">CSS</p>
                 <p id="jstag">JavaScript</p>
             </div>
-            <a href=""><button id="contribute"><p>Contribute</p><img src="https://static-00.iconduck.com/assets.00/github-icon-2048x1999-d37ckpm6.png" id="github">
+            <a href="https://github.com/multiverseweb/Dataverse/tree/main"><button id="contribute"><p>Contribute</p><img src="https://static-00.iconduck.com/assets.00/github-icon-2048x1999-d37ckpm6.png" id="github">
             </button></a>
         </div>
         <div class="develop_right">
@@ -66,7 +66,7 @@
         <div class="contact">
             <div class="name">
             <img src="web_images/2dlogo.svg" alt="" class="end-logo">
-            <p class="subheading">Dataverse</p>
+            <a class="subheading" href="index.html">Dataverse</a>
         </div>
         </div>
         <form action="">
@@ -79,7 +79,7 @@
     </footer>
     <div class="links">
         <hr>
-        <a href="">&copy;&nbsp;Tejas 2024</a>
+        <a href="https://tejasgupta.netlify.app/">&copy;&nbsp;Tejas 2024</a>
     </div>
     <script src="script.js"></script>
 </body>
