--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dataverse</title>
     <link rel="shortcut icon" href="web_images/2dlogo.svg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <navbar id="navbar">
         <a href="index.html"><img src="web_images/3dlogo.svg" alt="Dataverse Logo" class="logo"></a>
@@ -21,7 +26,9 @@
         <div class="about_left">
             <p class="heading">So, What does this Software do?</p>
             <p class="subheading">Visualise Data!</p>
-            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos nobis optio officia esse aut blanditiis inventore voluptatibus tempore, cupiditate doloribus asperiores recusandae nemo beatae aperiam sequi aliquam hic adipisci. Sequi!</p>
+            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos nobis optio officia esse aut
+                blanditiis inventore voluptatibus tempore, cupiditate doloribus asperiores recusandae nemo beatae
+                aperiam sequi aliquam hic adipisci. Sequi!</p>
         </div>
         <div class="about_right">
             <img src="web_images/about_up.png" class="preview up">
@@ -35,7 +42,9 @@
         </div>
         <div class="finance_right">
             <p class="subheading">Track Finances!</p>
-            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos nobis optio officia esse aut blanditiis inventore voluptatibus tempore, cupiditate doloribus asperiores recusandae nemo beatae aperiam sequi aliquam hic adipisci. Sequi!</p>
+            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos nobis optio officia esse aut
+                blanditiis inventore voluptatibus tempore, cupiditate doloribus asperiores recusandae nemo beatae
+                aperiam sequi aliquam hic adipisci. Sequi!</p>
         </div>
     </div>
     <div class="section" id="develop">
@@ -53,8 +62,10 @@
                 <p id="csstag">CSS</p>
                 <p id="jstag">JavaScript</p>
             </div>
-            <a href="https://github.com/multiverseweb/Dataverse/tree/main"><button id="contribute"><p>Contribute</p><img src="https://static-00.iconduck.com/assets.00/github-icon-2048x1999-d37ckpm6.png" id="github">
-            </button></a>
+            <a href="https://github.com/multiverseweb/Dataverse/tree/main"><button id="contribute">
+                    <p>Contribute</p><img
+                        src="https://static-00.iconduck.com/assets.00/github-icon-2048x1999-d37ckpm6.png" id="github">
+                </button></a>
         </div>
         <div class="develop_right">
             <img src="web_images/develop_up.png" class="preview up">
@@ -65,9 +76,9 @@
         <img src="web_images/cubes.svg" class="cubes">
         <div class="contact">
             <div class="name">
-            <img src="web_images/2dlogo.svg" alt="" class="end-logo">
-            <a class="subheading" href="index.html">Dataverse</a>
-        </div>
+                <img src="web_images/2dlogo.svg" alt="" class="end-logo">
+                <a class="subheading" href="index.html">Dataverse</a>
+            </div>
         </div>
         <form action="">
             <p>Let Me Know Your Thoughts!</p>
@@ -83,4 +94,5 @@
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
