--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
             <div class="line" id="l3"></div>
         </button>
     </navbar>
-
     <div class="section" id="about">
         <div class="about_left">
             <p class="heading">So, What does this Software do?</p>
@@ -33,6 +32,15 @@
         <div class="about_right">
             <img src="web_images/about_up.png" class="preview up">
             <img src="web_images/about_down.png" class="preview down">
+        </div>
+    </div>
+    <div class="section" id="charts">
+        <p class="heading">Here are some examples of what you can do with Dataverse.</p>
+        <div class="examples">
+            <img src="web_images/3d.gif" alt="">
+            <img src="web_images/galaxy.png" alt="">
+            <img src="web_images/volcano.gif" alt="">
+            <img src="web_images/live.gif" alt="">
         </div>
     </div>
     <div class="section" id="finance">
@@ -72,6 +80,7 @@
             <img src="web_images/develop_down.png" class="preview down">
         </div>
     </div>
+    <div class="design_line"></div>
     <footer>
         <img src="web_images/cubes.svg" class="cubes">
         <div class="contact">
@@ -89,8 +98,20 @@
         </form>
     </footer>
     <div class="links">
-        <hr>
-        <a href="https://tejasgupta.netlify.app/">&copy;&nbsp;Tejas 2024</a>
+        <p>Designed & Developed by Tejas Gupta</p>
+        <div class="end_line"></div>
+        <div class="small">
+            <div class="link_class">
+                <a href="https://github.com/multiverseweb/Dataverse">Github Repository↗</a>
+                <a
+                    href="https://www.figma.com/proto/BBbXARgpxercxacjm0qpgX/Dataverse?type=design&node-id=45-25&t=zMFBUgENaIeqhRYZ-1&scaling=scale-down-width&page-id=0%3A1&starting-point-node-id=22%3A310&show-proto-sidebar=1&mode=design">Figma
+                    Design↗</a>
+            </div>
+            <div class="link_class">
+                <a href="https://tejasgupta.netlify.app">Portfolio↗</a>
+                <a href="https://github.com/multiverseweb">Github Profile↗</a>
+            </div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
