--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <navbar id="navbar">
         <a href="index.html"><img src="web_images/3dlogo.svg" alt="Dataverse Logo" class="logo"></a>
+        <p class="subheading" id="top_name">Dataverse</p>
         <button id="burger">
             <div class="line" id="l1"></div>
             <div class="line" id="l2"></div>
@@ -89,7 +90,7 @@
                 <a class="subheading" href="index.html">Dataverse</a>
             </div>
         </div>
-        <form action="">
+        <form action="post" data-netlify="true">
             <p>Let Me Know Your Thoughts!</p>
             <input type="text" name="" placeholder="&nbsp;&nbsp;Your Name">
             <input type="email" name="" placeholder="&nbsp;&nbsp;Your Email ID">
