--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
                 <a class="subheading" href="index.html">Dataverse</a>
             </div>
         </div>
-        <form action="post" data-netlify="true">
+        <form name="Dataverse Reviews" action="POST" data-netlify="true">
             <p>Let Me Know Your Thoughts!</p>
-            <input type="text" name="" placeholder="&nbsp;&nbsp;Your Name">
-            <input type="email" name="" placeholder="&nbsp;&nbsp;Your Email ID">
-            <input type="text" name="" placeholder="&nbsp;&nbsp;Your Message">
+            <input type="text" name="Name" placeholder="&nbsp;&nbsp;Your Name">
+            <input type="email" name="Email" placeholder="&nbsp;&nbsp;Your Email ID">
+            <input type="text" name="Message" placeholder="&nbsp;&nbsp;Your Message">
             <input type="submit" value="Send" id="send">
         </form>
     </footer>
