--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
         <div class="about_left">
             <p class="heading">So, What does this Software do?</p>
             <p class="subheading">Visualise Data!</p>
-            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos nobis optio officia esse aut
-                blanditiis inventore voluptatibus tempore, cupiditate doloribus asperiores recusandae nemo beatae
-                aperiam sequi aliquam hic adipisci. Sequi!</p>
+            <p class="text">Easily transform raw data into visually appealing charts such as bar graphs, pie charts, and line graphs. It also supports advanced data visualisation techniques like heatmaps, Radar charts, 3D Surface Plots, etc.
+            <br><br>
+            You can also download the generated plots or save the data for later use.
+            </p>
         </div>
         <div class="about_right">
             <img src="web_images/about_up.png" class="preview up">
@@ -58,7 +59,7 @@
         </div>
     </div>
     <div class="section" id="charts">
-        <p class="heading">Here are some examples of what you can do with Dataverse.</p>
+        <p class="heading">Here are some examples of what you can do with Dataverse</p>
         <div class="examples" id="examples">
             <img src="web_images/3d.gif" alt="">
             <img src="web_images/galaxy.png" alt="">
@@ -74,9 +75,7 @@
         </div>
         <div class="finance_right">
             <p class="subheading">Track Finances!</p>
-            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos nobis optio officia esse aut
-                blanditiis inventore voluptatibus tempore, cupiditate doloribus asperiores recusandae nemo beatae
-                aperiam sequi aliquam hic adipisci. Sequi!</p>
+            <p class="text">Manage your finances by providing data such as income, expense, investment, etc. and get useful results such as visualization of data, extrapolated data, max expenditure, etc. Also, the software automatically stores data with a timestamp.</p>
         </div>
     </div>
     <div class="section" id="develop">
@@ -94,6 +93,7 @@
                 <p id="csstag">CSS</p>
                 <p id="jstag">JavaScript</p>
             </div>
+            <p class="text">This is an open-source project, and contributions are always welcome. Whether you're interested in adding new features, fixing bugs, or improving documentation, your contributions are valuable. You can contribute to the project by visiting the link to the GitHub repository provided below. Join me in making Dataverse even better for everyone!</p>
             <a href="https://github.com/multiverseweb/Dataverse/tree/main"><button id="contribute">
                     <p>Contribute</p><img
                         src="https://static-00.iconduck.com/assets.00/github-icon-2048x1999-d37ckpm6.png" id="github">
