added logo glow

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     </div>
     <button class="top" id="top" onclick="topFunction()"><img src="web_images/top.png" alt=""></button>
     <navbar id="navbar">
-        <a href="index.html"><img src="web_images/3dlogo.svg" alt="Dataverse Logo" class="logo"></a>
+        <a href="index.html"><img src="web_images/3dlogo.svg" alt="Dataverse Logo" class="logo" id="normal"></a>
+        <a href="index.html"><img src="web_images/3d_glow.png" alt="Dataverse Logo" class="logo" id="glow"></a>
     </navbar>
     <button class="burger" id="burger" onclick="show()"></button>
     <button id="cross" class="burger" onclick="hide()"></button>
