--- a/index.html
+++ b/index.html
@@ -45,98 +45,113 @@
         <div class="line" id="l3"></div>
     </div>
     <div class="plane" id="plane"></div>
-    <div class="section" id="about">
-        <div class="about_left">
-            <p class="heading">So, What does this Software do?</p>
-            <p class="subheading">Visualise Data!</p>
-            <p class="text">Easily transform raw data into visually appealing charts such as bar graphs, pie charts, and line graphs. It also supports advanced data visualisation techniques like heatmaps, Radar charts, 3D Surface Plots, etc.
-            <br><br>
-            You can also download the generated plots or save the data for later use.
-            </p>
-        </div>
-        <div class="about_right">
-            <img src="web_images/about_up.png" class="preview up">
-            <img src="web_images/about_down.png" class="preview down">
-        </div>
+    <div class="scrollBar" id="progress_bar"></div>          <!--PROGRSS BAR-->
+    <div class="download" id="download">
+        <p>Dataverse</p>
+        <div class="scroll_animation"></div>
     </div>
-    <div class="section" id="charts">
-        <p class="heading">Here are some examples of what you can do with Dataverse</p>
-        <div class="examples" id="examples">
-            <img src="web_images/3d.gif" alt="">
-            <img src="web_images/galaxy.png" alt="">
-            <img src="web_images/volcano.gif" alt="">
-            <img src="web_images/live.gif" alt="">
+    <div class="section big_container"></div>
+        <div class="section" id="about">
+            <div class="about_left">
+                <p class="heading">So, What does this Software do?</p>
+                <p class="subheading">Visualise Data!</p>
+                <p class="text">Easily transform raw data into visually appealing charts such as bar graphs, pie charts,
+                    and
+                    line graphs. It also supports advanced data visualisation techniques like heatmaps, Radar charts, 3D
+                    Surface Plots, etc.
+                    <br><br>
+                    You can also download the generated plots or save the data for later use.
+                </p>
+            </div>
+            <div class="about_right">
+                <img src="web_images/about_up.png" class="preview up">
+                <img src="web_images/about_down.png" class="preview down">
+            </div>
         </div>
-    </div>
+        <div class="section" id="charts">
+            <p class="heading">Here are some examples of what you can do with Dataverse</p>
+            <div class="examples" id="examples">
+                <img src="web_images/3d.gif" alt="">
+                <img src="web_images/galaxy.png" alt="">
+                <img src="web_images/volcano.gif" alt="">
+                <img src="web_images/live.gif" alt="">
+            </div>
+        </div>
 
-    <div class="section" id="finance">
-        <div class="finance_left">
-            <img src="web_images/finance_up.png" class="preview up">
-            <img src="web_images/finance_down.png" class="preview down">
-        </div>
-        <div class="finance_right">
-            <p class="subheading">Track Finances!</p>
-            <p class="text">Manage your finances by providing data such as income, expense, investment, etc. and get useful results such as visualization of data, extrapolated data, max expenditure, etc. Also, the software automatically stores data with a timestamp.</p>
-        </div>
-    </div>
-    <div class="section" id="develop">
-        <div class="develop_left">
-            <p class="heading">Want to contribute to this Project?</p>
-            <p class="subheading">Technologies Used</p>
-            <div class="tags" id="tags">
-                <p id="pythontag">Python</p>
-                <p id="numpytag">Numpy</p>
-                <p id="pandastag">Pandas</p>
-                <p id="matplotlibtag">Matplotlib</p>
-                <p id="pythontag">Tkinter</p>
-                <p id="mysqltag">MySQL</p>
-                <p id="htmltag">HTML</p>
-                <p id="csstag">CSS</p>
-                <p id="jstag">JavaScript</p>
+        <div class="section" id="finance">
+            <div class="finance_left">
+                <img src="web_images/finance_up.png" class="preview up">
+                <img src="web_images/finance_down.png" class="preview down">
             </div>
-            <p class="text">This is an open-source project, and contributions are always welcome. Whether you're interested in adding new features, fixing bugs, or improving documentation, your contributions are valuable. You can contribute to the project by visiting the link to the GitHub repository provided below. Join me in making Dataverse even better for everyone!</p>
-            <a href="https://github.com/multiverseweb/Dataverse/tree/main"><button id="contribute">
-                    <p>Contribute</p><img
-                        src="https://static-00.iconduck.com/assets.00/github-icon-2048x1999-d37ckpm6.png" id="github">
-                </button></a>
-        </div>
-        <div class="develop_right">
-            <img src="web_images/develop_up.png" class="preview up">
-            <img src="web_images/develop_down.png" class="preview down">
-        </div>
-    </div>
-    <div class="design_line"></div>
-    <footer>
-        <img src="web_images/cubes.svg" class="cubes">
-        <div class="contact">
-            <div class="name">
-                <img src="web_images/2dlogo.svg" alt="" class="end-logo">
-                <a class="subheading" href="index.html" id="last_link">Dataverse</a>
+            <div class="finance_right">
+                <p class="subheading">Track Finances!</p>
+                <p class="text">Manage your finances by providing data such as income, expense, investment, etc. and get
+                    useful results such as visualization of data, extrapolated data, max expenditure, etc. Also, the
+                    software automatically stores data with a timestamp.</p>
             </div>
         </div>
-        <form name="Dataverse Reviews" action="POST" data-netlify="true">
-            <p>Let Me Know Your Thoughts!</p>
-            <input type="text" name="Name" placeholder="&nbsp;&nbsp;Your Name">
-            <input type="email" name="Email" placeholder="&nbsp;&nbsp;Your Email ID">
-            <input type="text" name="Message" placeholder="&nbsp;&nbsp;Your Message">
-            <input type="submit" value="Send" id="send">
-        </form>
-    </footer>
-    <div class="links">
-        <p>Designed & Developed by Tejas Gupta</p>
-        <div class="end_line"></div>
-        <div class="small">
-            <div class="link_class">
-                <a href="https://github.com/multiverseweb/Dataverse">Github Repository↗</a>
-                <a
-                    href="https://www.figma.com/proto/BBbXARgpxercxacjm0qpgX/Dataverse?type=design&node-id=45-25&t=zMFBUgENaIeqhRYZ-1&scaling=scale-down-width&page-id=0%3A1&starting-point-node-id=22%3A310&show-proto-sidebar=1&mode=design">Figma
-                    Design↗</a>
+        <div class="section" id="develop">
+            <div class="develop_left">
+                <p class="heading">Want to contribute to this Project?</p>
+                <p class="subheading">Technologies Used</p>
+                <div class="tags" id="tags">
+                    <p id="pythontag">Python</p>
+                    <p id="numpytag">Numpy</p>
+                    <p id="pandastag">Pandas</p>
+                    <p id="matplotlibtag">Matplotlib</p>
+                    <p id="pythontag">Tkinter</p>
+                    <p id="mysqltag">MySQL</p>
+                    <p id="htmltag">HTML</p>
+                    <p id="csstag">CSS</p>
+                    <p id="jstag">JavaScript</p>
+                </div>
+                <p class="text">This is an open-source project, and contributions are always welcome. Whether you're
+                    interested in adding new features, fixing bugs, or improving documentation, your contributions are
+                    valuable. You can contribute to the project by visiting the link to the GitHub repository provided
+                    below. Join me in making Dataverse even better for everyone!</p>
+                <a href="https://github.com/multiverseweb/Dataverse/tree/main"><button id="contribute">
+                        <p>Contribute</p><img
+                            src="https://static-00.iconduck.com/assets.00/github-icon-2048x1999-d37ckpm6.png"
+                            id="github">
+                    </button></a>
             </div>
-            <div class="link_class">
-                <a href="https://tejasgupta.netlify.app">Portfolio↗</a>
-                <a href="https://github.com/multiverseweb">Github Profile↗</a>
+            <div class="develop_right">
+                <img src="web_images/develop_up.png" class="preview up">
+                <img src="web_images/develop_down.png" class="preview down">
             </div>
         </div>
+        <div class="design_line"></div>
+        <footer>
+            <img src="web_images/cubes.svg" class="cubes">
+            <div class="contact">
+                <div class="name">
+                    <img src="web_images/2dlogo.svg" alt="" class="end-logo">
+                    <a class="subheading" href="index.html" id="last_link">Dataverse</a>
+                </div>
+            </div>
+            <form name="Dataverse Reviews" action="POST" data-netlify="true">
+                <p>Let Me Know Your Thoughts!</p>
+                <input type="text" name="Name" placeholder="&nbsp;&nbsp;Your Name">
+                <input type="email" name="Email" placeholder="&nbsp;&nbsp;Your Email ID">
+                <input type="text" name="Message" placeholder="&nbsp;&nbsp;Your Message">
+                <input type="submit" value="Send" id="send">
+            </form>
+        </footer>
+        <div class="links">
+            <p>Designed & Developed by Tejas Gupta</p>
+            <div class="end_line"></div>
+            <div class="small">
+                <div class="link_class">
+                    <a href="https://github.com/multiverseweb/Dataverse">Github Repository↗</a>
+                    <a
+                        href="https://www.figma.com/proto/BBbXARgpxercxacjm0qpgX/Dataverse?type=design&node-id=45-25&t=zMFBUgENaIeqhRYZ-1&scaling=scale-down-width&page-id=0%3A1&starting-point-node-id=22%3A310&show-proto-sidebar=1&mode=design">Figma
+                        Design↗</a>
+                </div>
+                <div class="link_class">
+                    <a href="https://tejasgupta.netlify.app">Portfolio↗</a>
+                    <a href="https://github.com/multiverseweb">Github Profile↗</a>
+                </div>
+            </div>
     </div>
     <script src="script.js"></script>
 </body>
