--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="download" id="download">
         <div class="top_dataverse"><p id="data">Data</p><p>verse</p></div>
         <p id="intro_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit libero expedita eum, architecto quos deserunt eius nulla beatae voluptatum ipsa. <br><br>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque quas vero suscipit exercitationem corporis magnam iste iusto, in tempore neque.</p>
-        <button id="download_btn">Download Dataverse</button>
+        <button id="download_btn">Get Dataverse</button>
         <div class="scroll_animation"></div>
     </div>
     <div class="section big_container"></div>
