--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
     <div class="download" id="download">
         <div class="left">
-            <div id="map"></div>
+            <div id="map"><img src="https://cdn-icons-png.flaticon.com/512/0/614.png" id="aeroplane"></div>
         </div>
         <div class="right">
             <div class="top_dataverse">
@@ -60,7 +60,7 @@
                 <p>verse</p>
             </div>
             <p id="intro_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit libero expedita eum,
-                architecto quos deserunt eius nulla beatae voluptatum ipsa. <br><br>Lorem ipsum dolor sit, amet
+                architecto quos deserunt eius nulla beatae voluptatum ipsa. Lorem ipsum dolor sit, amet
                 consectetur adipisicing elit. Doloremque quas vero suscipit exercitationem corporis magnam iste
                 iusto, in tempore neque.</p>
             <button id="download_btn">Get Dataverse</button>
