--- a/index.html
+++ b/index.html
@@ -59,11 +59,9 @@
                 <p id="data">Data</p>
                 <p>verse</p>
             </div>
-            <p id="intro_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit libero expedita eum,
-                architecto quos deserunt eius nulla beatae voluptatum ipsa. Lorem ipsum dolor sit, amet
-                consectetur adipisicing elit. Doloremque quas vero suscipit exercitationem corporis magnam iste
-                iusto, in tempore neque.</p>
-            <button id="download_btn">Get Dataverse</button>
+            <p id="intro_text">An Open-Source Software (OSS) that integrates database management, data visualization, and data wrangling.</p>
+            <p id="intro_text">The adjoining map shows the locations of people who are using or contributing to Dataverse.</p>
+            <button id="download_btn" onclick="download_prompt()">Get Dataverse</button>
         </div>
         <div class="scroll_animation"></div>
     </div>
@@ -123,7 +121,7 @@
                 <p id="csstag">CSS</p>
                 <p id="jstag">JavaScript</p>
             </div>
-            <p class="text">This is an open-source project, and contributions are always welcome. Whether you're
+            <p class="text">As this is an open-source project, contributions are always welcome. Whether you're
                 interested in adding new features, fixing bugs, or improving documentation, your contributions are
                 valuable. You can contribute to the project by visiting the link to the GitHub repository provided
                 below. Join me in making Dataverse even better for everyone!</p>
