--- a/index.html
+++ b/index.html
@@ -45,7 +45,26 @@
         <div class="line" id="l2"></div>
         <div class="line" id="l3"></div>
     </div>
-    <div class="plane" id="plane"></div>
+    <div class="plane" id="plane">
+        <table>
+            <tr>
+                <td><a href="https://github.com/multiverseweb/Dataverse" class="table_link">Github Repository</a></td>
+            </tr>
+            <tr>
+                <td>
+                    <a
+                        href="https://www.figma.com/proto/BBbXARgpxercxacjm0qpgX/Dataverse?type=design&node-id=45-25&t=zMFBUgENaIeqhRYZ-1&scaling=scale-down-width&page-id=0%3A1&starting-point-node-id=22%3A310&show-proto-sidebar=1&mode=design" class="table_link">Figma
+                        Design</a>
+                </td>
+            </tr>
+            <tr>
+                <td><a href="" class="table_link">Code of Conduct</a></td>
+            </tr>
+            <tr>
+                <td><a href="" class="table_link">License</a></td>
+            </tr>
+        </table>
+    </div>
     <div class="scrollBar" id="progress_bar"></div> <!--PROGRESS BAR-->
     <div class="scroll_icon" id="scroll_icon">SCROLL TO KNOW MORE
         <div class="shadow" id="shadow"></div>
@@ -59,8 +78,9 @@
                 <p id="data">Data</p>
                 <p>verse</p>
             </div>
-            <p id="intro_text">An Open-Source Software (OSS) that integrates database management, data visualization, and data wrangling.</p>
-            <p id="intro_text">The adjoining map shows the locations of people who are using or contributing to Dataverse.</p>
+            <p id="intro_text">An Open-Source Software (OSS) that integrates database management, data visualization,
+                and data wrangling.</p>
+            <p id="intro_text">The adjoining map shows people who are using or contributing to Dataverse.</p>
             <button id="download_btn" onclick="download_prompt()">Get Dataverse</button>
         </div>
         <div class="scroll_animation"></div>
@@ -137,7 +157,7 @@
     </div>
     <div class="design_line"></div>
     <footer>
-        <img src="web_images/cubes.svg" class="cubes">
+        <img src="web_images/cubes.png" class="cubes">
         <div class="contact">
             <div class="name">
                 <img src="web_images/2dlogo.svg" alt="" class="end-logo">
@@ -157,13 +177,9 @@
         <div class="end_line"></div>
         <div class="small">
             <div class="link_class">
-                <a href="https://github.com/multiverseweb/Dataverse">Github Repository↗</a>
-                <a
-                    href="https://www.figma.com/proto/BBbXARgpxercxacjm0qpgX/Dataverse?type=design&node-id=45-25&t=zMFBUgENaIeqhRYZ-1&scaling=scale-down-width&page-id=0%3A1&starting-point-node-id=22%3A310&show-proto-sidebar=1&mode=design">Figma
-                    Design↗</a>
+                <a href="https://tejasgupta.netlify.app">Portfolio↗</a>
             </div>
             <div class="link_class">
-                <a href="https://tejasgupta.netlify.app">Portfolio↗</a>
                 <a href="https://github.com/multiverseweb">Github Profile↗</a>
             </div>
         </div>
