--- a/index.html
+++ b/index.html
@@ -48,12 +48,15 @@
     <div class="plane" id="plane">
         <table>
             <tr>
+                <td><a href="https://multiverseweb.github.io/Encryptify/" class="table_link">Encryptify</a></td>
+            </tr>
+            <tr>
                 <td><a href="https://github.com/multiverseweb/Dataverse" class="table_link">Github Repository</a></td>
             </tr>
             <tr>
                 <td>
-                    <a
-                        href="https://www.figma.com/proto/BBbXARgpxercxacjm0qpgX/Dataverse?type=design&node-id=45-25&t=zMFBUgENaIeqhRYZ-1&scaling=scale-down-width&page-id=0%3A1&starting-point-node-id=22%3A310&show-proto-sidebar=1&mode=design" class="table_link">Figma
+                    <a href="https://www.figma.com/proto/BBbXARgpxercxacjm0qpgX/Dataverse?type=design&node-id=45-25&t=zMFBUgENaIeqhRYZ-1&scaling=scale-down-width&page-id=0%3A1&starting-point-node-id=22%3A310&show-proto-sidebar=1&mode=design"
+                        class="table_link">Figma
                         Design</a>
                 </td>
             </tr>
